Bugfixx involving the header alignment.

--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ body {
 }
 
 header p {
-  text-align: center;
+  text-align: justify;
+  text-align-last: center;
 }
 
 .container{
